--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 h1 {
