--- a/style.css
+++ b/style.css
@@ -59,6 +59,17 @@ body {
     background-color: rgba(255, 255, 255, 0.2);
 }
 
+.tab-button {
+    font: inherit;
+}
+
+.note-input {
+    width: 800px;
+    height: 150px;
+    padding-top: 5px;
+    line-height: normal;
+}
+
 h1 {
     text-align: center;
     font-size: 80px;
