--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 body {
     padding: 0;
     margin: 0;
-    background-image: url("/img/shell overlay repeating.svg");
-    background-repeat: repeat;
+    /* background-image: url("/img/shell overlay repeating.svg");
+    background-repeat: repeat; */
     height: 96vh;
     background-size: 50%;
     color: white;
